create a search endpoint

--- a/Foodea/appsettings.json
+++ b/Foodea/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CockroachDb": "Host=lair-narwhal-1981.7s5.cockroachlabs.cloud;Database=defaultdb;Username=thabo;Password=L3r486MsJZPFyJRKuoaecg;Port=26257"
+  },
+  "APIKeys": {
+    "spoonacularApiKey": "38262c2033cb423b9b84d05b835d1ee8"
   }
 }
